Compress images to low size

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio/Multishotcam.png" alt="..." />
+                            <img class="img-fluid" src="assets/img/portfolio/Multishotcam.jpg" alt="..." />
                         </div>
                     </div>
                     <!-- Portfolio Item 4-->
@@ -98,7 +98,7 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio/cristmas_camera.jpeg" alt="..." />
+                            <img class="img-fluid" src="assets/img/portfolio/cristmas_camera.jpg" alt="..." />
                         </div>
                     </div>
                     <!-- Portfolio Item 5-->
@@ -107,7 +107,7 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio/XmasShoppingCart.png" alt="..." />
+                            <img class="img-fluid" src="assets/img/portfolio/XmasShoppingCart.jpg" alt="..." />
                         </div>
                     </div>
                     <!-- Portfolio Item 6-->
@@ -276,7 +276,6 @@ Adapt swiftly to the new technology.</p></div>
                         <p class="lead mb-0">
                             This template is a free to use, MIT licensed Bootstrap theme created by
                             <a href="http://startbootstrap.com">Start Bootstrap</a>
-                            .
                         </p>
                     </div>
                 </div>
@@ -384,7 +383,7 @@ Adapt swiftly to the new technology.</p></div>
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/Multishotcam.png" alt="..." />
+                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/Multishotcam.jpg" alt="..." />
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-4"><a href="https://apptopia.com/ios/app/651932840/about">Multi Shot Cam</a> is the most entertaining photography application in App Store. “Multi Shot Cam-Take Multiple Photos with Timer” could provide artistic effects to your photos. Use Multi Shot Cam in your shot and create innovative photos ideas.</p>
 									<p style="font-weight: bold;">Responsibility</p>
@@ -424,7 +423,7 @@ Adapt swiftly to the new technology.</p></div>
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/cristmas_camera.jpeg" alt="..." />
+                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/cristmas_camera.jpg" alt="..." />
                                     <!-- Portfolio Modal - Text-->
 									<p class="mb-4"><a href="https://appadvice.com/app/christmas-camera/583777614.amp">Christmas Camera †</a> is one of the iOS apps developed by me. Christmas is everywhere. Get yourself in the festive spirit by decorating your photos for Christmas and share Christmas photos with loving ones</p>
 									<p style="font-weight: bold;">Responsibility</p>
@@ -464,7 +463,7 @@ Adapt swiftly to the new technology.</p></div>
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/XmasShoppingCart.png" alt="..." />
+                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/XmasShoppingCart.jpg" alt="..." />
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-4"><a href="https://apptopia.com/ios/app/580392033/about">Xmas Shopping Cart</a> is one of the iOS apps developed by me. Christmas is just around the corner and if you are looking for a tool to plan your shopping then this app is perfect to help you plan this season of gifting and stay within budget</p>
 									<p style="font-weight: bold;">Responsibility</p>
