Updated Resume and website

--- a/index.html
+++ b/index.html
@@ -255,13 +255,6 @@ Adapt swiftly to the new technology.</p></div>
         <footer class="footer text-center">
             <div class="container">
                 <div class="row">
-                    <!-- Footer Location-->
-                    <div class="col-lg-4 mb-5 mb-lg-0">
-                        <h4 class="text-uppercase mb-4">Location</h4>
-                        <p class="lead mb-0">
-                            Dhaka, Bangladesh
-                        </p>
-                    </div>
                     <!-- Footer Social Icons-->
                     <div class="col-lg-4 mb-5 mb-lg-0">
                         <h4 class="text-uppercase mb-4">Around the Web</h4>
@@ -270,13 +263,10 @@ Adapt swiftly to the new technology.</p></div>
                         <a class="btn btn-outline-light btn-social mx-1" href="https://www.linkedin.com/in/iarafathsn/"><i class="fab fa-fw fa-linkedin-in"></i></a>
                         <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-dribbble"></i></a>
                     </div>
-                    <!-- Footer About Text-->
+                    <!-- Footer Video Play-->
                     <div class="col-lg-4">
-                        <h4 class="text-uppercase mb-4">About Template</h4>
-                        <p class="lead mb-0">
-                            This template is a free to use, MIT licensed Bootstrap theme created by
-                            <a href="http://startbootstrap.com">Start Bootstrap</a>
-                        </p>
+                        <h4 class="text-uppercase mb-4">What's Up!</h4>
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/MbULIkB2aks?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
                 </div>
             </div>
@@ -636,10 +626,6 @@ Adapt swiftly to the new technology.</p></div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
         <script src="js/scripts.js"></script>
-        <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
-        <!-- * *                               SB Forms JS                               * *-->
-        <!-- * * Activate your form at https://startbootstrap.com/solution/contact-forms * *-->
-        <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
         <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
     </body>
 </html>
