Added 5d viewer and ST experience

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Arafat - Hello World!</title>
+        <title>Arafat - Resume</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/arafat.ico" />
         <!-- Font Awesome icons (free version)-->
@@ -50,6 +50,10 @@
                 </div>
                 <!-- Masthead Subheading-->
                 <p class="masthead-subheading font-weight-light mb-0">Critical Thinker - Mobile Apps Developer - Coder</p>
+                <div class="divider-custom divider-light">
+                    <div class="divider-custom-line"></div>
+                </div>
+                <p class="masthead-subheading font-weight-light mb-0">Experienced Mobile and Desktop Application Developer | iOS, macOS, Windows, Android</p>
             </div>
         </header>
         <!-- Portfolio Section-->
@@ -65,6 +69,24 @@
                 </div>
                 <!-- Portfolio Grid Items-->
                 <div class="row justify-content-center">
+                    <!-- Portfolio Item SmartThings-->
+                    <div class="col-md-6 col-lg-4 mb-5">
+                        <div class="portfolio-item mx-auto" data-bs-toggle="modal" data-bs-target="#portfolioModalSmartThings">
+                            <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+                                <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
+                            </div>
+                            <img class="img-fluid" src="assets/img/portfolio/smartthings.jpg" alt="..." />
+                        </div>
+                    </div>
+                    <!-- Portfolio Item 5D Viewer-->
+                    <div class="col-md-6 col-lg-4 mb-5">
+                        <div class="portfolio-item mx-auto" data-bs-toggle="modal" data-bs-target="#portfolioModalMedison">
+                            <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+                                <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
+                            </div>
+                            <img class="img-fluid" src="assets/img/portfolio/5d_viewer.jpg" alt="..." />
+                        </div>
+                    </div>
                     <!-- Portfolio Item 1-->
                     <div class="col-md-6 col-lg-4 mb-5">
                         <div class="portfolio-item mx-auto" data-bs-toggle="modal" data-bs-target="#portfolioModal1">
@@ -135,10 +157,11 @@
                 </div>
                 <!-- About Section Content-->
                 <div class="row">
-                    <div class="col-lg-4 ms-auto"><p class="lead">Creating bug free application is my hobby. Mobile and desktop apps developer for more than 9+ years.
-Adapt swiftly to the new technology.</p></div>
-                    <div class="col-lg-4 me-auto"><p class="lead">"Many of life’s failures are people who did not realize how close they were to success when they gave up."– Thomas A. Edison</p></div>
+                    <div class="col-lg-4 ms-justify"><p class="lead">With over 12 years of experience in developing robust, bug-free mobile and desktop applications, I have a proven track record of adapting quickly to new technologies. Throughout my career, I have successfully contributed to multiple high-profile projects, including Samsung DeX for PC (macOS), where I served as the lead application developer, and the ongoing SmartThings iOS project, where I have taken ownership of key features such as Settings, Contact Us, Report Error, and MapView.</p></div>
+                    <div class="col-lg-4 ms-auto"><p class="lead">In addition to my mobile app expertise, I contributed to Samsung Medison’s 5D Viewer, a desktop application for visualizing and post-processing 3D volume data from ultrasound machines. I led the integration of a graphics engine and developed a new GUI, handling complex medical terms and real-time data processing. Post-release, I played a role in fixing issues related to large datasets, ensuring performance and stability.</p></div>
+                    <div class="col-lg-4 ms-auto"><p class="lead">At SmartThings, I am responsible for enhancing the MapView, including adding new device cards (TV, light, etc.), and have worked on critical features like Do Not Disturb and Emergency Alert notification settings. With experience in the MVVM design pattern and the Combine framework, I ensure seamless integration and maintain performance while managing frequent quarterly releases and a large user base.</p></div>
                 </div>
+                <p class="lead">I am passionate about continuous improvement, maintaining high standards for code quality, and ensuring a positive user experience.</p>
                 <!-- About Section Button-->
                 <div class="text-center mt-4">
                     <a class="btn btn-xl btn-outline-light" href="assets/resume/Resume_Md-Arafat-Hossain.pdf">
@@ -257,25 +280,108 @@ Adapt swiftly to the new technology.</p></div>
                 <div class="row">
                     <!-- Footer Social Icons-->
                     <div class="col-lg-4 mb-5 mb-lg-0">
-                        <h4 class="text-uppercase mb-4">Around the Web</h4>
-                        <a class="btn btn-outline-light btn-social mx-1" href="https://www.facebook.com/iarafathsn"><i class="fab fa-fw fa-facebook-f"></i></a>
-                        <a class="btn btn-outline-light btn-social mx-1" href="https://twitter.com/iarafathsn"><i class="fab fa-fw fa-twitter"></i></a>
-                        <a class="btn btn-outline-light btn-social mx-1" href="https://www.linkedin.com/in/iarafathsn/"><i class="fab fa-fw fa-linkedin-in"></i></a>
-                        <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-dribbble"></i></a>
+                        <h4 class="text-uppercase mb-4">Journey Across the Web</h4>
+                        <a class="btn btn-outline-light btn-social mx-1" href="https://www.linkedin.com/in/iarafathsn" target="_blank"><i class="fab fa-fw fa-linkedin-in"></i></a>
+                        <a class="btn btn-outline-light btn-social mx-1" href="https://stackoverflow.com/users/4213419/arafat-hossain" target="_blank"><i class="fa-brands fa-stack-overflow"></i></a>
+                        <a class="btn btn-outline-light btn-social mx-1" href="https://twitter.com/iarafathsn" target="_blank"><i class="fab fa-fw fa-twitter"></i></a>
+                        <a class="btn btn-outline-light btn-social mx-1" href="https://www.facebook.com/iarafathsn" target="_blank"><i class="fab fa-fw fa-facebook-f"></i></a>
+                        <a class="btn btn-outline-light btn-social mx-1" href="https://www.instagram.com/iarafathsn" target="_blank"><i class="fab fa-fw fa-instagram"></i></a>
                     </div>
                     <!-- Footer Video Play-->
                     <div class="col-lg-4">
                         <h4 class="text-uppercase mb-4">What's Up!</h4>
-                        <iframe width="560" height="315" src="https://www.youtube.com/embed/MbULIkB2aks?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <p class="lead">"Many of life’s failures are people who did not realize how close they were to success when they gave up."– Thomas A. Edison</p></div>
                     </div>
                 </div>
             </div>
         </footer>
         <!-- Copyright Section-->
         <div class="copyright py-4 text-center text-white">
-            <div class="container"><small>Copyright &copy; Arafat 2022</small></div>
+            <div class="container"><small>Copyright &copy; Arafat 2025</small></div>
         </div>
         <!-- Portfolio Modals-->
+        <!-- Portfolio Modal SmartThings-->
+        <div class="portfolio-modal modal fade" id="portfolioModalSmartThings" tabindex="-1" aria-labelledby="portfolioModalSmartThings" aria-hidden="true">
+            <div class="modal-dialog modal-xl">
+                <div class="modal-content">
+                    <div class="modal-header border-0"><button class="btn-close" type="button" data-bs-dismiss="modal" aria-label="Close"></button></div>
+                    <div class="modal-body text-center pb-5">
+                        <div class="container">
+                            <div class="row justify-content-center">
+                                <div class="col-lg-8">
+                                    <!-- Portfolio Modal - Title-->
+                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">SmartThings (iOS)</h2>
+                                    <!-- Icon Divider-->
+                                    <div class="divider-custom">
+                                        <div class="divider-custom-line"></div>
+                                        <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+                                        <div class="divider-custom-line"></div>
+                                    </div>
+                                    <!-- Portfolio Modal - Image-->
+                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/smartthings.jpg" alt="..." />
+                                    <!-- Portfolio Modal - Text-->
+                                    <p class="mb-4">The <a href="https://apps.apple.com/us/app/smartthings/id1222822904" target="_blank">SmartThings iOS</a> application is Samsung’s IoT platform that enables users to connect, monitor, and control a wide range of smart devices from their iPhone or iPad. It supports various devices, including TVs, lights, security cameras, and air conditioners, allowing seamless automation and remote access. Users can create customized routines, such as turning off lights and locking doors at bedtime, or automate actions based on location and sensor triggers.</p>
+                                    <p>The app also features MapView, a recently developed addition that visually maps IoT devices for easier interaction. Energy monitoring helps track power consumption, while real-time notifications and alerts keep users informed about security events, motion detection, and emergency situations. Integration with Bixby, Google Assistant, and Alexa allows for voice control, and Apple Watch support ensures quick access.</p>
+                                    <p>Additionally, SmartThings Find helps locate lost Samsung devices, and multi-user access lets family members share control of smart home devices with assigned permissions. The app continuously evolves, introducing new features every quarter to enhance the user experience and expand smart home capabilities.</p>
+									<p style="font-weight: bold;">Responsibility</p>
+                                    <div class="text-start">
+										<p class="mb-4">&#10003; Taken ownership of key features such as Settings, Contact Us, Report Error, How to use and MapView
+										<br/>&#10003; Experienced in MVVM-C and Redux for scalable and maintainable application development
+										<br/>&#10003; Led the transition from ReactiveSwift to Combine, improving performance and code maintainability
+										<br/>&#10003; Proficient in UIKit and SwiftUI, ensuring modern and intuitive user interfaces
+                                        <br/>&#10003; Strong expertise in Swift, utilizing its latest advancements for efficient and high-quality app development</p>
+									</div>
+                                    <button class="btn btn-primary" data-bs-dismiss="modal">
+                                        <i class="fas fa-xmark fa-fw"></i>
+                                        Close Window
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Portfolio Modal 5D Viewer-->
+        <div class="portfolio-modal modal fade" id="portfolioModalMedison" tabindex="-1" aria-labelledby="portfolioModalMedison" aria-hidden="true">
+            <div class="modal-dialog modal-xl">
+                <div class="modal-content">
+                    <div class="modal-header border-0"><button class="btn-close" type="button" data-bs-dismiss="modal" aria-label="Close"></button></div>
+                    <div class="modal-body text-center pb-5">
+                        <div class="container">
+                            <div class="row justify-content-center">
+                                <div class="col-lg-8">
+                                    <!-- Portfolio Modal - Title-->
+                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">5D Viewer</h2>
+                                    <!-- Icon Divider-->
+                                    <div class="divider-custom">
+                                        <div class="divider-custom-line"></div>
+                                        <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+                                        <div class="divider-custom-line"></div>
+                                    </div>
+                                    <!-- Portfolio Modal - Image-->
+                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/5d_viewer.jpg" alt="..." />
+                                    <!-- Portfolio Modal - Text-->
+									<p class="mb-4"><a href="https://www.bostonimaging.com/ultrasound-5d-viewer" target="_blank">5D Viewer</a> is standalone software that can be installed in laptops/PCs with Microsoft Windows. This product lets users use their computers to review, analyze, edit, and measure the volume data exported from ultrasound equipment via storage media such as USB drive. Since this product reads 3D volume data, users can review the test results of patients more quickly and easily. This function allows them to check 3D image results without using an ultrasound system, helping them conduct more tests with the ultrasound system. 5D Viewer only supports the DICOM files containing the volume data created by Samsung Medison. In other words, you only use the volume data (.mvl, sty) in DICOM files.</p>
+                                    <p>5D Viewer is not compatible with the DICOM files from a third party. 5D Viewer uses the volume data of <a href="https://samsungmedison.com" target="_blank">Samsung Medison</a>'s WS80A, RS80A, and HS70A Ultrasound systems. The Volume Data contains the raw data obtained during the scan as well as the information required for rendering (e.g., Geometry, View mode, etc.). The patient information is not relevant to the rendering, so it is not included in the Volume Data.</p>
+									<p style="font-weight: bold;">Responsibility</p>
+                                    <div class="text-start">
+										<p class="mb-4">&#10003; 5D Viewer software enables offline volume manipulation, analysis and optimization of Samsung ultrasound data sets
+										<br/>&#10003; Rendering 4D Volume Data in Windows PC Application
+										<br/>&#10003; Post processing on the volume data (3D Cine, 4D Cine, CNS+, LB, LV, NT and Follicle)
+										<br/>&#10003; 5D Heart file opening</p>
+									</div>
+                                    <button class="btn btn-primary" data-bs-dismiss="modal">
+                                        <i class="fas fa-xmark fa-fw"></i>
+                                        Close Window
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
         <!-- Portfolio Modal 1-->
         <div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" aria-labelledby="portfolioModal1" aria-hidden="true">
             <div class="modal-dialog modal-xl">
