--- a/index.html
+++ b/index.html
@@ -643,7 +643,7 @@
                                     <!-- Experience Modal - Text-->
 									<p style="font-weight: bold;">Java, C/C++, C#, Objective-C, Swift</p>
                                     <div class="text-start">
-										<p class="mb-4"><h6 style="font-weight: bold;">Chief Engineer</h6>
+										<p class="mb-4"><h6 style="font-weight: bold;">Staff Engineer</h6>
 										<br/> 10 June, 2013 to Present - 
 										<script>
 											var startDate = new Date("06/10/2013");
@@ -660,6 +660,10 @@
 											document.write(years + " yr " + months + " m");
 										</script>
 										<br/><a href="https://research.samsung.com/srbd">Samsung R&D Institute Bangladesh (SRBD)</a> Ltd.
+                                        <br/>&#10003; Swift, SwiftUI, Objective-C, MVVM, MVVM-C, Java, C\C++
+                                        <br/>&#10003; iOS, macOS, Windows, Android
+                                        <br/>&#10003; SmartThings (iOS)
+                                        <br/>&#10003; Samsung Medison's 5D Viewer (Windows App)
 										<br/>&#10003; Samsung DeX (macOS/Windows/Android)
 										<br/>&#10003; IoTivity
 										</p>
