Updated blog click on site

--- a/index.html
+++ b/index.html
@@ -282,6 +282,7 @@
                     <div class="col-lg-4 mb-5 mb-lg-0">
                         <h4 class="text-uppercase mb-4">Journey Across the Web</h4>
                         <a class="btn btn-outline-light btn-social mx-1" href="https://www.linkedin.com/in/iarafathsn" target="_blank"><i class="fab fa-fw fa-linkedin-in"></i></a>
+						<a class="btn btn-outline-light btn-social mx-1" href="https://iarafathsn.blogspot.com/" target="_blank"><i class="fa fa-globe"></i></a>
                         <a class="btn btn-outline-light btn-social mx-1" href="https://github.com/iarafathsn" target="_blank"><i class="fa-brands fa-github"></i></a>
                         <a class="btn btn-outline-light btn-social mx-1" href="https://stackoverflow.com/users/4213419/arafat-hossain" target="_blank"><i class="fa-brands fa-stack-overflow"></i></a>
                         <a class="btn btn-outline-light btn-social mx-1" href="https://leetcode.com/u/iarafathsn" target="_blank">
@@ -292,7 +293,7 @@
                         <a class="btn btn-outline-light btn-social mx-1" href="https://www.facebook.com/iarafathsn" target="_blank"><i class="fab fa-fw fa-facebook-f"></i></a>
                         <a class="btn btn-outline-light btn-social mx-1" href="https://www.instagram.com/iarafathsn" target="_blank"><i class="fab fa-fw fa-instagram"></i></a>
                     </div>
-                    <!-- Footer Video Play-->
+                    <!-- Footer Quates-->
                     <div class="col-lg-4">
                         <h4 class="text-uppercase mb-4">What's Up!</h4>
                         <p class="lead">"Many of life’s failures are people who did not realize how close they were to success when they gave up."– Thomas A. Edison</p></div>
